fix: Fix the position of the header for mobile devices
The header now appears centered whereas before it was too close to the
left margin.

--- a/src/client/styles/layout/header.scss
+++ b/src/client/styles/layout/header.scss
@@ -4,6 +4,7 @@
     max-width: 80%;
     h1 {
         margin-left: 0.5rem;
+        text-align: center;
     }
 }
 
@@ -13,6 +14,7 @@
 
         h1 {
             margin-left: 3.7rem;
+            text-align: left;
         }
     }
 }
